data/derived/sp14/progs/unify/prog4693.ml.out
Characters 91-116:
  | _ -> additivePersistence((sumList(digitsOfInt(n))) (count+1));;
                             ^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int
       This is not a function; it cannot be applied.
